tests/baselines/reference/templateStringUnterminated1.errors.txt
templateStringUnterminated1.ts(1,2): error TS1160: Unterminated template literal.


==== templateStringUnterminated1.ts (1 errors) ====
    `
     
!!! error TS1160: Unterminated template literal.